tests/invalid/test_074.wyal
function f(int x) -> (int&!int r)

